--- a/categories.yaml
+++ b/categories.yaml
@@ -36,4 +36,9 @@ categories:
       - atms
       - signal_optimization
       - cloud_platforms
+      - Signal Performance Measures
+      - Signal Optimization Control Technology
+      - Simulation
+      - Near Miss Video Analytics
+      - Signal Optimization Tools
 
