--- a/categories.yaml
+++ b/categories.yaml
@@ -1,44 +1,78 @@
 categories:
-  - id: controllers
-    symbol: CTRL
-    name: Controllers
-    group: control
-    children:
-      - atc
-      - '2070'
-      - "170"
-
-  - id: detection
-    symbol: DET
-    name: Detection
-    group: detection
-    children:
-      - radar
-      - video
-      - hybrid
-      - thermal
-      - lidar
-
-  - id: comms
-    symbol: CO
-    name: Commnications
-    group: communications
-    children:
-      - Edge Switch
-      - Core Switch
-      - Wireless Radio
-
-  - id: software
-    symbol: SW
-    name: Software
-    group: software
-    children:
-      - atms
-      - signal_optimization
-      - cloud_platforms
-      - Signal Performance Measures
-      - Signal Optimization Control Technology
-      - Simulation
-      - Near Miss Video Analytics
-      - Signal Optimization Tools
-
+- id: controllers
+  symbol: CTRL
+  name: Controllers
+  group: control
+  children:
+  - id: atc
+    name: ATC
+    productCount: 0
+  - id: '2070'
+    name: '2070'
+    productCount: 0
+  - id: '170'
+    name: '170'
+    productCount: 0
+- id: detection
+  symbol: DET
+  name: Detection
+  group: detection
+  children:
+  - id: radar
+    name: Radar
+    productCount: 6
+  - id: video
+    name: Video
+    productCount: 0
+  - id: hybrid
+    name: Hybrid
+    productCount: 0
+  - id: thermal
+    name: Thermal
+    productCount: 2
+  - id: lidar
+    name: Lidar
+    productCount: 0
+- id: comms
+  symbol: CO
+  name: Commnications
+  group: communications
+  children:
+  - id: edge switch
+    name: Edge switch
+    productCount: 0
+  - id: core switch
+    name: Core switch
+    productCount: 0
+  - id: wireless radio
+    name: Wireless radio
+    productCount: 0
+- id: software
+  symbol: SW
+  name: Software
+  group: software
+  children:
+  - id: atms
+    name: Atms
+    productCount: 0
+  - id: signal_optimization
+    name: Signal_optimization
+    productCount: 0
+  - id: cloud_platforms
+    name: Cloud_platforms
+    productCount: 0
+  - id: signal performance measures
+    name: Signal performance measures
+    productCount: 0
+  - id: signal optimization control technology
+    name: Signal optimization control technology
+    productCount: 0
+  - id: simulation
+    name: Simulation
+    productCount: 0
+  - id: near miss video analytics
+    name: Near miss video analytics
+    productCount: 0
+  - id: signal optimization tools
+    name: Signal optimization tools
+    productCount: 0
